--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>PTT Software Co.,Ltd</title>
+<title>PTT Project Co.,Ltd</title>
 <!-- fav icon -->
 <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR64UDrIxlodOhMwd0BBxDStBec8gJ-og-5DQ&usqp=CAU" rel="icon" type="image/png" sizes="32x32" />
 
@@ -71,7 +71,7 @@
 
  		 <a href="#" class="navbar-brand mx-3">
  		      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR64UDrIxlodOhMwd0BBxDStBec8gJ-og-5DQ&usqp=CAU" width="50px" alt="sitelog" />
- 		      <span class="ms-2">PTT Software Co.,Ltd </span>  
+ 		      <span class="ms-2">PTT Project Co.,Ltd </span>  
  		 </a>
 
  		 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav"><i class="navbar-toggler-icon"> </i></button>
